# flower

./: .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
apps/: CMakeLists.txt
apps/bilateral/: bilateral.impala  mask_f32.impala
apps/bilateral_burst/: bilateral_burst.impala  mask_f32.impala
apps/box_filter/: box_filter.impala  box_filter_const.impala
apps/box_filter_burst/: box_filter_burst.impala
apps/filter_chain/: filter_chain.impala  mask_f32.impala
apps/filter_chain_burst/: filter_chain_burst.impala
apps/gaussian/: gaussian.impala
apps/gaussian_burst/: gaussian_burst.impala  mask_f32.impala
apps/harris_corner/: harris_corner.impala
apps/harris_corner_burst/: harris_corner_burst.impala  main.cpp  mask_f32.impala
apps/jacobi/: jacobi.impala
apps/jacobi_burst/: jacobi_burst.impala  mask_f32.impala
apps/laplace/: laplace.impala
apps/laplace_burst/: laplace_burst.impala
apps/optical_flow_hs/: mask_f32.impala  optical_flow_hs.impala
apps/optical_flow_lk/: optical_flow_lk.impala
apps/shi_thomasi/: mask_f32.impala  shi_thomasi.impala
apps/sobel_burst/: mask_i32.impala  sobel_burst.impala
apps/sobel_luma/: sobel_luma.impala
apps/sobel_luma_burst/: sobel_luma_burst.impala
apps/square/: square.impala
apps/square_burst/: square_burst.impala
apps/unsharp/: mask_f32.impala  unsharp.impala
scripts/aoc/: emulate.sh
scripts/board/Xilinx/: init_xilinx.sh
src/: backend_amdgpu.impala  backend_cgra.impala  backend_cpu.impala  backend_hls.impala  backend_nvvm.impala  channel_type.impala  mapping_acc.impala  mapping_cgra.impala  mapping_cpu.impala  mapping_fpga.impala  mapping_fpga_img_hls.impala  mapping_fpga_img_opencl.impala  mat_lib.impala  matmul.impala  pixel_f32.impala  pixel_i32.impala  pixel_u8.impala  stencil_lib.impala  stencil_lib_img_fpga.impala  stencil_lib_img_proc.impala  utils.impala
src/channel_lib/: ch_vec1.impala  ch_vec128.impala  ch_vec16.impala  ch_vec2.impala  ch_vec32.impala  ch_vec4.impala  ch_vec64.impala  ch_vec8.impala
test/: CMakeLists.txt  dataflow.impala  test_dataflow.impala  test_fir_vectorized.impala  test_fpga_cgra_dataflow.impala  test_fpga_cgra_vectorized.impala  test_fpga_copy.impala  test_fpga_multi_kernel_cgra_dataflow.impala  test_loop_pipeline.impala  test_lp_nested.impala  test_reserve_shared.impala
